Added support for Cyanide & Happiness comic RSS at http://feeds.feedburner.com/Explosm
Specific changes:
- Added maxitems option to limit the number of RSS items processed... This was added because processing more than 5 items seemed to create a strange slowdown I haven't quite figured out yet.
- Use the follow-redirects module instead of http module because for some reason the above comic returned 301 redirects at the original URLs which needed to be followed
- And of course added parser for the Cyanide & Happiness comic, including handling of extracting thumbnails for those comics which are youtube videos

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "comics-feed",
   "version": "0.0.7",
-  "homepage": "http://github.com/leesei/node-comics-feed",
+  "homepage": "http://github.com/eguendelman/node-comics-feed",
   "description": "Scrape comics strips from feed, embed the strip images and create a new feed",
   "author": {
     "name": "KY LEE",
@@ -14,10 +14,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/leesei/node-comics-feed"
+    "url": "http://github.com/eguendelman/node-comics-feed"
   },
   "bugs": {
-    "url": "http://github.com/leesei/node-comics-feed/issues"
+    "url": "http://github.com/eguendelman/node-comics-feed/issues"
   },
   "keywords": [
     "rss",
@@ -30,7 +30,8 @@
     "rss": "~0.2.1",
     "feedparser": "~0.16.5",
     "cheerio": "~0.12.4",
-    "nomnom": "~1.6.2"
+    "nomnom": "~1.6.2",
+    "follow-redirects": "~0.0.3"
   },
   "license": "MIT"
 }
