use Wreck to handle http redirects, 'use strict' every where
 Changes to be committed:

	modified:   README.md
	modified:   bin/comics-feed
	modified:   lib/main.js
	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "comics-feed",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "homepage": "http://github.com/leesei/node-comics-feed",
   "description": "Scrape comics strips from feed, embed the strip images and create a new feed",
   "author": {
@@ -8,9 +8,9 @@
     "email": "leesei@gmail.com",
     "url": "http://leesei.github.io/"
   },
-  "main": "lib/main.js",
+  "main": "./lib/main.js",
   "bin": {
-    "comics-feed": "bin/comics-feed"
+    "comics-feed": "./bin/comics-feed"
   },
   "repository": {
     "type": "git",
@@ -26,11 +26,12 @@
     "scrape"
   ],
   "dependencies": {
-    "async": "~0.2.9",
-    "rss": "~0.2.1",
-    "feedparser": "~0.16.5",
-    "cheerio": "~0.12.4",
-    "nomnom": "~1.6.2"
+    "async": "*",
+    "cheerio": "*",
+    "feedparser": "*",
+    "nomnom": "*",
+    "rss": "*",
+    "wreck": "*"
   },
   "license": "MIT"
 }
